--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
       /*--------------------------------------------------------------
     # General
     --------------------------------------------------------------*/
+      @font-face {
+        font-family: "Space Grotesk";
+        src: url("assets/SpaceGrotesk.ttf") format("truetype");
+      }
       body {
-        font-family: "Open Sans", sans-serif;
+        font-family: "Space Grotesk", sans-serif;
         color: #444444;
         background-color: #f8f9fa;
       }
@@ -53,7 +57,7 @@
       h4,
       h5,
       h6 {
-        font-family: "Raleway", sans-serif;
+        font-family: "Space Grotesk", sans-serif;
       }
 
       a {
@@ -425,7 +429,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <div class="col-lg-12 pt-4 pt-lg-0 content">
             <h3>Software Engineer</h3>
             <p>
               Software Engineer with 7+ years of experience in full-stack
