--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="resume-item">
               <h4>Senior Software Engineer</h4>
               <h5>01/2021 - Present</h5>
-              <p><em>Rootstrap, Los Angeles, CA</em></p>
+              <p><em>Rootstrap, Los Angeles, CA (Remote)</em></p>
               <ul>
                 <li>
                   Worked as a full stack developer following agile methodology
@@ -861,8 +861,8 @@
           strings: [
             "Software Engineer",
             "Full Stack Developer",
-            "AI & LLM Expert",
             "Javascript Developer",
+            "AI & LLM Expert",
           ],
           loop: true,
           typeSpeed: 80,
