--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
     <footer id="footer">
       <div class="container">
         <h3>Irfan Khan</h3>
-        <p>Software Engineer with expertise in full-stack development</p>
+        <p>Software Engineer with expertise in full-stack & AI development</p>
         <div class="social-links">
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           <a href="#" class="github"><i class="bi bi-github"></i></a>
@@ -862,7 +862,7 @@
             "Software Engineer",
             "Full Stack Developer",
             "Javascript Developer",
-            "AI & LLM Expert",
+            "AI Expert",
           ],
           loop: true,
           typeSpeed: 80,
